# health-buddy

./: .gitignore  .mise.toml  CLAUDE.md  README.md  codecov.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17a9b48545b3_initial_migration.py  add_source_column_to_health_metrics.py
backend/app/: main.py
backend/app/api/: allergies.py  appointments.py  conditions.py  config.py  dashboard.py  goals.py  health_metrics.py  import_health.py  lab_results.py  medical_history.py  medications.py  supplements.py  symptoms.py  vaccinations.py
backend/app/core/: config.py
backend/app/models/: __init__.py  allergy.py  app_config.py  appointment.py  health_goal.py  health_metric.py  lab_result.py  lab_result_value.py  medical_condition.py  medical_history.py  medication.py  supplement.py  symptom.py  vaccination.py
backend/app/schemas/: __init__.py  allergy.py  app_config.py  appointment.py  health_goal.py  health_metric.py  import_health.py  lab_result.py  medical_condition.py  medical_history.py  medication.py  supplement.py  symptom.py  vaccination.py
backend/app/services/: apple_health_parser.py  base.py  crud.py  lab_result_service.py
backend/tests/: test_apple_health_parser.py  test_dashboard.py  test_health_metrics.py  test_import_health.py  test_main.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/: app.css
frontend/src/lib/: constants.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  (+1 more)
(+39 files in other folders)
